igt@kms_invalid_mode@clock-too-high - dmesg-fail - *ERROR* Timeout waiting for DDI BUF D to get active
7> [396.389646] i915 0000:00:02.0: [drm:drm_dp_read_dpcd_caps] AUX USBC1/DDI TC1/PHY TC1: DPCD: 14 1e c4 81 01 1d 01 81 38 2d 04 00 00 00 84
<3> [396.455955] i915 0000:00:02.0: [drm] *ERROR* Timeout waiting for DDI BUF D to get active
<7> [396.456028] i915 0000:00:02.0: [drm:intel_dp_start_link_train [i915]] [ENCODER:317:DDI TC1/PHY TC1] Using LINK_BW_SET value 1e
<7> [396.458287] i915 0000:00:02.0: [drm:intel_dp_set_signal_levels [i915]] [ENCODER:317:DDI TC1/PHY TC1][DPRX] 8b/10b, lanes: 4, vswing levels: 0/0/0/0, pre-emphasis levels: 0/0/0/0
<7> [396.458394] i915 0000:00:02.0: [drm:intel_dp_program_link_training_pattern [i915]] [ENCODER:317:DDI TC1/PHY TC1][DPRX] Using DP training pattern TPS1
<7> [396.526668] i915 0000:00:02.0: [drm:intel_dp_get_adjust_train [i915]] [ENCODER:317:DDI TC1/PHY TC1][DPRX] 8b/10b, lanes: 4, vswing request: 2/2/2/2, pre-emphasis request: 0/0/0/0
<7> [396.526757] i915 0000:00:02.0: [drm:intel_dp_set_signal_levels [i915]] [ENCODER:317:DDI TC1/PHY TC1][DPRX] 8b/10b, lanes: 4, vswing levels: 2/2/2/2, pre-emphasis levels: 0/0/0/0
<7> [396.530425] i915 0000:00:02.0: [drm:intel_dp_get_adjust_train [i915]] [ENCODER:317:DDI TC1/PHY TC1][DPRX] 8b/10b, lanes: 4, vswing request: 3/3/3/3, pre-emphasis request: 0/0/0/0
<7> [396.530509] i915 0000:00:02.0: [drm:intel_dp_set_signal_levels [i915]] [ENCODER:317:DDI TC1/PHY TC1][DPRX] 8b/10b, lanes: 4, vswing levels: 3(max)/3(max)/3(max)/3(max), pre-emphasis levels: 0/0/0/0
<7> [396.533144] i915 0000:00:02.0: [drm:intel_dp_dump_link_status [i915]] [ENCODER:317:DDI TC1/PHY TC1][DPRX] ln0_1:0x0 ln2_3:0x0 align:0x80 sink:0x0 adj_req0_1:0x33 adj_req2_3:0x33
<7> [396.533228] i915 0000:00:02.0: [drm:intel_dp_link_train_phy [i915]] [ENCODER:317:DDI TC1/PHY TC1][DPRX] Max Voltage Swing reached
<7> [396.533305] i915 0000:00:02.0: [drm:intel_dp_link_train_phy [i915]] [CONNECTOR:318:DP-1][ENCODER:317:DDI TC1/PHY TC1][DPRX] Link Training failed at link rate = 810000, lane count = 4
<3> [396.600105] i915 0000:00:02.0: [drm] *ERROR* Timed out waiting for DP idle patterns
<7> [396.600122] [drm:intel_dp_modeset_retry_work_fn [i915]] [CONNECTOR:318:DP-1]